--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,33 @@ h1, h2, h3, h4 {
     font-size: 2em;
     text-align: center;
 }
+
+button {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
 #adContainer {
     border: 1px solid rgb(46, 46, 46);
     width: 80%;
     margin: 20px auto;
     padding: 30px;
 }
+
+#paginationContainer {
+    margin: auto;
+    text-align: center;
+}
+
+.activePaginationButton {
+    border-bottom: 3px solid red;
+}
+
 button#showSavedAds {
     border: none;
     outline: none;
