--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@ body{
     font-family: 'Cutive Mono', monospace;
     font-size: 1.2em;
 }
+
+.wrapper{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+
 h1, h2, h3, h4 {
     font-weight: 700;
     font-size: 2em;
