--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ body{
     font-size: 1.2em;
 }
 
+header#topHeader {
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
+    position: -o-sticky;
+    position: sticky;
+    top: 0px;
+}
+
 .wrapper{
     width: 100%;
     display: grid;
