--- a/css/style.css
+++ b/css/style.css
@@ -246,4 +246,10 @@ button#showSavedAds {
     }
 }
 
-@media screen and (min-width: 1024px) {}
+@media screen and (min-width: 1024px) {
+       #logo img {
+        width: 30%;
+        height: 30%;
+    }
+    
+}
