--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,16 @@ select {
     margin-top: 20px;
 }
 
+.noSavedMessage{
+    width: 100%;
+    text-align: center;
+    font-weight: 900;
+    font-size: 1.6em;
+    text-align: center;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    
+}
+
 #topHeader {
     grid-area: topHeader;
     background-color: #2C4359;
