--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,14 @@ header#topHeader {
 #logo {
     display: flex;
     justify-content: center;
-
+    cursor: pointer;
 }
 
 #logo img {
-    margin-top: 5%;
-    margin-bottom: 5%;
-    width: 40%;
-    height: 40%;
-
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+    width: 35%;
+    height: 35%;
 }
 
 #selectorsWrapper {
@@ -93,7 +92,7 @@ select {
     font-size: 1.6em;
     text-align: center;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    
+
 }
 
 #topHeader {
